[package]
edition = "2021"
name = "ecg-anomaly-detection"
version = "0.1.0"

[dependencies]
burn = { version = "0.14.0", features = ["dataset", "wgpu"] }
burn-autodiff = "0.14.0"
burn-core = "0.14.0"
burn-ndarray = "0.14.0"
burn-tensor = "0.14.0"
burn-train = "0.14.0"
csv = "1.3.0"
ndarray = "0.15"
rand = "0.8.5"
serde = "1.0.210"
